--- a/web/sass/home.scss
+++ b/web/sass/home.scss
@@ -331,7 +331,7 @@
     background-color: var(--color-header);
     outline: 2px solid var(--color-separator);
     overflow-y: scroll;
-    padding: 12px 12px;
+    padding: 12px;
     margin: 0;
     border-radius: 0 0 0 4px;
     width: calc(200px + 15vw);
@@ -339,10 +339,12 @@
     gap: 18px;
     transition-duration: 0.1s;
 
+    span {
+        white-space: nowrap;
+    }
+
     b {
         color: #e6e6e6;
-        font-style: italic;
-        font-family: monospace;
     }
 
     li {
@@ -367,7 +369,6 @@
         list-style-type: none;
         margin: 0;
         padding-left: 6px;
-        gap: 4px;
         border-left: 4px solid var(--color-separator);
     }
 
