--- a/web/sass/home.scss
+++ b/web/sass/home.scss
@@ -73,7 +73,9 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
-        padding: 48px;
+        padding: 48px 32px;
+
+        h1 { text-align: center; }
     }
 
     > #savedGames {
@@ -230,8 +232,6 @@
     align-items: center;
     gap: 32px !important;
 
-    h1 { text-align: center; }
-
     .info {
         @extend %vertical;
         gap: 16px;
@@ -374,5 +374,15 @@
 
     > .new {
         border-left: 4px solid var(--color-primary);
+    }
+}
+
+.product-info {
+    p {
+        text-align: center;
+    }
+
+    b {
+        color: white;
     }
 }
