--- a/web/sass/mobile.scss
+++ b/web/sass/mobile.scss
@@ -1,10 +1,12 @@
-@media only screen and (min-width: 800px) {
+@use '_mixins.scss';
+
+@include mixins.on-desktop {
     .on-mobile {
         display: none !important;
     }
 }
 
-@media only screen and (max-width: 799px) {
+@include mixins.on-mobile {
     .no-mobile {
         display: none !important;
     }
