--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -659,26 +659,30 @@ footer {
     justify-content: space-between !important;
 }
 
+.tooltip {
+    transition-duration: 0.1s;
+    position: absolute;
+    bottom: 100%;
+    background-color: var(--color-background);
+    border-radius: $radius;
+    padding: 6px 8px;
+    pointer-events: none;
+    opacity: 0;
+    max-width: 180px;
+    width: max-content;
+    z-index: 2;
+    font-family: var(--font-paragraph);
+    font-size: 16px;
+    font-weight: normal;
+}
+
 %with-tooltip {
     position: relative;
     display: flex;
     justify-content: center;
 
     > span {
-        transition-duration: 0.1s;
-        position: absolute;
-        bottom: 100%;
-        background-color: var(--color-background);
-        border-radius: $radius;
-        padding: 6px 8px;
-        pointer-events: none;
-        opacity: 0;
-        max-width: 180px;
-        width: max-content;
-        z-index: 2;
-        font-family: var(--font-paragraph);
-        font-size: 16px;
-        font-weight: normal;
+        @extend .tooltip;
     }
 
     @include mixins.on-desktop {
