--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -688,6 +688,23 @@
     }
 }
 
+#miniChat {
+    position: absolute;
+    bottom: calc(100% + 4px);
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 4px;
+
+    > span {
+        position: relative;
+        opacity: 0.9;
+        background-color: var(--color-not-intense);
+        text-align: start;
+    }
+}
+
 #board {
     position: absolute;
     display: flex;
