align system messages to center

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -629,6 +629,11 @@
 
         &.hidden { opacity: 0.6; }
 
+        &.global {
+            max-width: fit-content;
+            align-self: center;
+        }
+
         &.mine {
             align-self: flex-end;
         }
