--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -319,20 +319,21 @@
         white-space: nowrap;
 
         > span {
-            gap: 8px;
             justify-content: flex-start;
+            width: 260px;
 
-            > input { width: 100%; }
+            > :first-child {
+                margin-left: 8px;
+            }
+
+            > input {
+                min-width: 48px;
+                width: 100%;
+            }
         }
 
         &.hidden {
             @extend .invisible;
-        }
-        
-        &:not(.empty) {
-            .on-empty {
-                display: none;
-            }
         }
     }
 
@@ -513,6 +514,16 @@
     }
     &:not([mode="fow"]) {
         #polymaskWrapper { pointer-events: none; opacity: 0.85; }
+    }
+}
+
+#movableLabel {
+    input {
+        color: var(--color-primary);
+    }
+
+    b:not(:empty) {
+        margin-right: 3px;
     }
 }
 
