--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -825,19 +825,22 @@ $blink-off: #888d;
         height: 1px;
     }
 }
-.distance-text {
+
+.toast {
     position: absolute;
     z-index: 1002;
     padding: 8px 12px;
     border-radius: base.$radius;
     background-color: var(--color-not-intense);
     box-shadow: 0 0 8px 2px #0005;
-    transform-origin: top left;
-    transition-duration: 0.1s;
-    transition-property: transform;
-    transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: transform 0s cubic-bezier(0.165, 0.84, 0.44, 1), opacity 0.3s 0.1s;
     pointer-events: none;
     white-space: nowrap;
+}
+
+.distance-text {
+    @extend .toast;
+    transform-origin: top left;
 
     &.slow {
         opacity: 0;
@@ -888,6 +891,8 @@ $blink-off: #888d;
 
 .movable {
     position: absolute;
+    display: flex;
+    justify-content: center;
     border: 0 solid var(--color-background);
     width: calc(var(--size) * 70px - 1.5px);
     height: calc(var(--size) * 70px - 1.5px);
@@ -944,6 +949,8 @@ $blink-off: #888d;
         left: 0;
         display: flex;
         cursor: default;
+        transform: scale(calc(70 / var(--cell-size)));
+        transform-origin: top left;
 
         > i {
             @extend %with-tooltip;
@@ -973,6 +980,13 @@ $blink-off: #888d;
         width: 100%;
         height: 100%;
         animation: scale-pulse 2s infinite ease-in-out;
+    }
+
+    > .toast {
+        top: 60%;
+        background-color: #111a;
+        padding: 6px 8px;
+        opacity: 0;
     }
 
     &.empty {
@@ -1015,6 +1029,12 @@ $blink-off: #888d;
 
         > .ring {
             border: 3px solid white;
+        }
+    }
+    &:not(:active):hover {
+        > .toast {
+            opacity: 1;
+            transition-delay: 0s;
         }
     }
 }
