--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -984,7 +984,8 @@ $blink-off: #888d;
 
     > .toast {
         top: 60%;
-        background-color: #111a;
+        font-size: 14px;
+        background-color: #1119;
         padding: 6px 8px;
         opacity: 0;
     }
