--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -896,8 +896,8 @@ $blink-off: #888d;
     border: 0 solid var(--color-background);
     width: calc(var(--size) * 70px - 1.5px);
     height: calc(var(--size) * 70px - 1.5px);
-    left: calc(var(--x) * var(--cell-size) * 1px + 1px);
-    top: calc(var(--y) * var(--cell-size) * 1px + 1px);
+    left: calc(var(--x) * 1px + 1px);
+    top: calc(var(--y) * 1px + 1px);
     box-sizing: border-box;
     transform-origin: top left;
     transform: scale(calc(var(--cell-size) / 70));
