--- a/web/sass/panels.scss
+++ b/web/sass/panels.scss
@@ -60,7 +60,8 @@
 
     > span {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
+        gap: 4px;
     }
 
     > button {
