--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -535,6 +535,11 @@
 
 #gridCanvas {
     pointer-events: none;
+
+    pattern {
+        stroke-width: 0.05;
+        fill: none;
+    }
 }
 
 #session {
@@ -894,13 +899,11 @@ $blink-off: #888d;
     display: flex;
     justify-content: center;
     border: 0 solid var(--color-background);
-    width: calc(var(--size) * 70px - 1.5px);
-    height: calc(var(--size) * 70px - 1.5px);
-    left: calc(var(--x) * 1px + 1px);
-    top: calc(var(--y) * 1px + 1px);
+    width: calc(var(--size) * 70px);
+    height: calc(var(--size) * 70px);
     box-sizing: border-box;
     transform-origin: top left;
-    transform: scale(calc(var(--cell-size) / 70));
+    transform: translate(var(--x), var(--y)) scale(calc(var(--cell-size) / 70));
     transition: border-color 0.1s, width 0.1s, height 0.1s, opacity 0.1s;
     z-index: calc(100 - var(--size));
 
@@ -949,8 +952,6 @@ $blink-off: #888d;
         left: 0;
         display: flex;
         cursor: default;
-        transform: scale(calc(70 / var(--cell-size)));
-        transform-origin: top left;
 
         > i {
             @extend %with-tooltip;
