--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -809,7 +809,7 @@ $blink-off: #888d;
     fill: #eee7;
 }
 .grid-canvas {
-    stroke-width: 0.1;
+    stroke-width: 10;
     stroke-linecap: round;
     stroke-linejoin: round;
 
@@ -818,8 +818,12 @@ $blink-off: #888d;
     path, .no-fill {
         fill: none !important;
     }
-    circle:not(.no-fill) {
-        stroke: none !important;
+    circle {
+        &:not(.no-fill) {
+            stroke: none !important;
+        }
+
+        r: 20;
     }
     g > rect {
         fill: unset;
