fixed svg css properties for firefox

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -823,7 +823,7 @@ $blink-off: #888d;
             stroke: none !important;
         }
 
-        r: 20;
+        r: 20px;
     }
     g > rect {
         fill: unset;
