--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -809,7 +809,7 @@ $blink-off: #888d;
     fill: #eee7;
 }
 .grid-canvas {
-    stroke-width: 10;
+    stroke-width: 0.1px;
     stroke-linecap: round;
     stroke-linejoin: round;
 
@@ -818,16 +818,14 @@ $blink-off: #888d;
     path, .no-fill {
         fill: none !important;
     }
-    circle {
-        &:not(.no-fill) {
-            stroke: none !important;
-        }
-
-        r: 20px;
+    circle.origin {
+        stroke: none !important;
+        r: 0.2px;
     }
     g > rect {
         fill: unset;
         stroke: #fff !important;
+        stroke-width: 0.05px;
         width: 1px;
         height: 1px;
     }
