--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -987,6 +987,7 @@ $token-unit-size-half-px: ($token-unit-size * -0.5) + px;
         width: 100%;
         height: 100%;
         animation: scale-pulse 1s infinite alternate ease-in-out;
+        opacity: 0.7;
     }
 
     > .toast {
@@ -1036,7 +1037,7 @@ $token-unit-size-half-px: ($token-unit-size * -0.5) + px;
         border-color: white !important;
 
         > .ring {
-            border: 3px solid #eeea;
+            border: 3px solid white;
         }
     }
     &:not(:active):hover {
@@ -1340,6 +1341,6 @@ $ping-radius: 100px;
 }
 .arrowEnd {
     transform: translate(0, calc(var(--size) * $token-unit-size-half-px - var(--offset)));
-    text-shadow: 0 0 4px #000c;
+    text-shadow: 0 0 4px #000b;
     font-size: 1.5rem;
 }
