--- a/web/sass/home.scss
+++ b/web/sass/home.scss
@@ -121,8 +121,8 @@
         gap: 16px;
         padding: 30px 36px;
         box-shadow: none;
-        min-width: 200px;
-        width: 16vw;
+        min-width: 20rem;
+        width: 25vw;
 
         > div {
             display: flex;
